src/app/components/fancy-chat/fancy-chat.component.css
.chat-container {
  height: 100%;
  max-height: 100%;
  overflow-y: scroll;
  background-color: var(--fancy-background-color);
}

.message-container {
  margin: 0 2em 0 2em;
}

.to-right {
  text-align: right;
}

.profile-pic-container {
  display: inline-block;
  width:40px;
}

.black-outer {
  padding: 3px;
  background-color: black;
  clip-path: polygon(0% 90%, 92% 95%, 100% 10%, 5% 20%);
  transform: rotateZ(-5deg);
}

.white-background {
  width: 40px;
  height: 40px;
  padding: 10px;
  background-color: white;
  clip-path: polygon(0% 90%, 92% 95%, 100% 10%, 5% 20%);
}

.message-outer {
  display: inline-block;
  padding: .5em;
  max-width: 60%;
  background-color: white;
  clip-path: polygon(0% 90%, 92% 95%, 100% 10%, 5% 20%);
}

.message {
  display: inline-block;
  margin: .5em 0 .5em 0;
  padding: .5em;
  max-width: 100%;
  word-break: break-all;
  color: white;
  background-color: black;
  clip-path: polygon(0% 100%, 95% 100%, 100% 0%, 5% 10%);
}

.own-black-outer {
  background-color: black;
}

.own-message {
  color: black;
  background-color: white;
}

.content {
  width: 100%;
}

.b-outer {
  padding: 3px;
  background-color: black;
  transform: translateY(15px) rotateZ(-8deg);
  width: 160px;
  clip-path: polygon(0% 90%, 98% 94%, 100% 0%, 3% 5%);
  position: relative;
  z-index: 100;
}

.b-outer2 {
  padding: 2px;
  background-color: black;
  transform: translateY(15px) rotateZ(-5deg);
  width: 130px;
  clip-path: polygon(0% 90%, 98% 94%, 100% 0%, 3% 5%);
  position: relative;
  z-index: 100;
}

.from {
  width: 150px;
  background-color: white;
  color: black;
  clip-path: polygon(0% 90%, 98% 94%, 100% 0%, 3% 5%);
  padding: 5px;
}

.timestamp {
  background-color: white;
  width: 120px;
  margin: 5px;
  clip-path: polygon(0% 90%, 98% 94%, 100% 0%, 3% 5%);
}

.scrollRef {
  height: 120px;
}

emoji-mart {
  position: absolute;
  bottom: 150px;
  right: 10px;
}

.emoji-container {
  position: absolute;
  bottom: 50px;
  left: calc(50% - 160px);
  background-color: white;
  padding: 4px;
  animation: emoji-outer 2s infinite;
}

@keyframes emoji-outer {
  0% {clip-path: polygon(0% 90%, 98% 94%, 100% 0%, 10% 5%);}
  50% {clip-path: polygon(2% 98%, 100% 79%, 97% 3%, 3% 10%);}
  100% {clip-path: polygon(0% 90%, 98% 94%, 100% 0%, 10% 5%);}
}

.emoji-button {
  background-color: black;
  color: white;
  width: 34px;
  height: 34px;
  padding: 5px;
  text-align: center;
  animation: emoji-inner 2s infinite;
}

@keyframes emoji-inner {
  0% {clip-path: polygon(0% 90%, 98% 94%, 100% 0%, 3% 5%)}
  50% {clip-path: polygon(2% 99%, 95% 74%, 97% 5%, 3% 10%);}
  100% {clip-path: polygon(0% 90%, 98% 94%, 100% 0%, 3% 5%)}
}

.inputbox-container {
  background-color: white;
  padding: 15px;
  position: absolute;
  bottom: 0;
  left: calc(50% - 122px);
  animation: outer-anim 2s infinite;
}

@keyframes outer-anim {
  0% {clip-path: polygon(1% 82%, 95% 85%, 98% 5%, 5% 5%);}
  50% {clip-path: polygon(2% 75%, 99% 79%, 97% 3%, 3% 10%);}
  100% {clip-path: polygon(1% 82%, 95% 85%, 98% 5%, 5% 5%);}
}

.input {
  resize: none;
  border: 0;
  color: white;
  background-color: black;
  border-radius: 0;
  padding: 10px;
  overflow: hidden;
  animation: inner-anim 2s infinite;
}

@keyframes inner-anim {
  0% {clip-path: polygon(0% 100%, 98% 100%, 100% 0%, 2% 4%);}
  50% {clip-path: polygon(0% 99%, 99% 100%, 99% 2%, 0% 2%);}
  100% {clip-path: polygon(0% 100%, 98% 100%, 100% 0%, 2% 4%);}
}

::-webkit-scrollbar {
  width: 15px;
}

::-webkit-scrollbar-track {
  background: black;
  border: 4px solid white;
}

::-webkit-scrollbar-thumb {
  background: white;
}

